# MyDataStruct_C

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: listLib.h  lockLib.h  rpcLib.h
lib/include/: debug.h  def.h  err.h
src/: listLib.c  lockLib.c  main.c  rpcLib.c  testLock.c  testMyList.c  testRpc.c
